<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_page"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_forum_navigation"
            android:icon="@drawable/ic_discover"
            android:title="@string/discover_tab"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_message"
            android:icon="@drawable/ic_comment"
            android:title="@string/message"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_about_me"
            android:title="@string/about_me"
            android:icon="@drawable/ic_me"
            app:showAsAction="ifRoom"/>

</menu>