<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:gravity="center"
    android:background="@color/white">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_marginTop="@dimen/dp_30"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:scaleType="fitCenter"
        app:lottie_rawRes="@raw/github_logo"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>
    <TextView
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/github_title"/>
    <TextView
        android:id="@+id/github_url"
        android:autoLink="web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColorLink="@color/light_blue"
        android:clickable="true"
        android:text="@string/github_url"
        android:focusable="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_marginTop="@dimen/dp_30"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:scaleType="fitCenter"
        app:lottie_rawRes="@raw/send_email"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>
    <TextView
        android:layout_marginTop="@dimen/dp_20"
        android:id="@+id/author_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/author_title"/>
    <TextView
        android:id="@+id/author_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:autoLink="email"
        android:text="@string/author_email"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/me"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_300"
        android:scaleType="fitCenter"
        app:lottie_rawRes="@raw/personal_mac_daytime"
        app:lottie_loop="false"
        app:lottie_autoPlay="true"/>
</LinearLayout>