<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/dp_10"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply_post_dialog_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/reply_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:maxLines="6"
                android:theme="@style/ReplyEditText"
                app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_30"
                android:background="@drawable/button_bg"
                android:text="@string/reply_post_btn_cancel"
                android:backgroundTint="@color/semi_gray"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toStartOf="@id/btn_confirm"
                app:layout_constraintTop_toBottomOf="@id/reply_content"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/btn_confirm"
                android:layout_width="@dimen/dp_50"
                android:layout_height="0dp"
                android:background="@drawable/button_bg"
                android:text="@string/reply_post_btn_confirm"
                android:backgroundTint="@color/cyan_dark"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                app:layout_constraintTop_toTopOf="@id/btn_cancel"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>